--- a/CSS/about-section.css
+++ b/CSS/about-section.css
@@ -76,7 +76,7 @@
 
 .resume-btn button:hover,
 .contact-about:hover {
-    transform: translateY(-5px);
+    transform: scale(1.1);
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
 }
 
